--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,42 +1,120 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:fillViewport="true">
 
-    <LinearLayout
+    <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
+        android:paddingTop="@dimen/margin_edit_text"
+        android:paddingBottom="@dimen/margin_edit_text"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:gravity="center"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-        <ImageView
-            android:layout_width="78dp"
-            android:layout_height="78dp"
-            android:src="@drawable/logo"/>
+        tools:context=".MainActivity">
 
-        <TextView
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/welcome"
-            android:textAppearance="?android:textAppearanceLarge"
-            android:textColor="@color/colorPrimary"
-            android:layout_margin="@dimen/text_margin"
-            />
+            android:orientation="vertical"
+            android:gravity="center"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+            <ImageView
+                android:layout_width="78dp"
+                android:layout_height="78dp"
+                android:src="@drawable/logo"/>
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/login_to_go"
-            android:textColor="@color/colorPrimary"
-            android:layout_margin="@dimen/text_margin"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/welcome"
+                android:textAppearance="?android:textAppearanceLarge"
+                android:textColor="@color/colorPrimary"
+                android:layout_margin="@dimen/text_margin"
+                />
 
-    </LinearLayout>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/login_to_go"
+                android:textColor="@color/colorPrimary"
+                android:layout_margin="@dimen/text_margin"/>
 
-</android.support.constraint.ConstraintLayout>
+            <androidx.cardview.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/layout_margin"
+                android:layout_marginEnd="@dimen/layout_margin"
+                app:cardCornerRadius="32dp"
+                app:cardElevation="2dp"
+                android:layout_marginBottom="@dimen/text_margin"
+                android:layout_marginTop="@dimen/text_margin">
+                <EditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@color/transparent"
+                    android:padding="@dimen/text_margin"
+                    android:hint="@string/username"
+                    android:inputType="textEmailAddress"
+                    android:lines="1"
+                    android:drawableLeft="@drawable/ic_perm_identity"
+                    android:drawablePadding="@dimen/text_margin"
+                    android:drawableStart="@drawable/ic_perm_identity" />
+            </androidx.cardview.widget.CardView>
+
+            <androidx.cardview.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/layout_margin"
+                android:layout_marginEnd="@dimen/layout_margin"
+                app:cardCornerRadius="32dp"
+                app:cardElevation="2dp"
+                android:layout_marginBottom="@dimen/text_margin"
+                android:layout_marginTop="@dimen/text_margin">
+                <EditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@color/transparent"
+                    android:padding="@dimen/text_margin"
+                    android:inputType="textPassword"
+                    android:hint="@string/password"
+                    android:lines="1"
+                    android:drawableLeft="@drawable/ic_lock_outline"
+                    android:drawablePadding="@dimen/text_margin"
+                    android:drawableStart="@drawable/ic_lock_outline"
+                    android:drawableRight="@drawable/ic_visibility_off_black_24dp"
+                    android:drawableEnd="@drawable/ic_visibility_off_black_24dp"/>
+            </androidx.cardview.widget.CardView>
+
+
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/login"
+                android:layout_marginTop="32dp"
+                android:layout_marginBottom="32dp"
+                android:layout_marginStart="@dimen/layout_margin"
+                android:layout_marginEnd="@dimen/layout_margin"
+                android:background="@drawable/rounded_button_selector"
+                android:textColor="@color/white"
+                tools:ignore="UnusedAttribute"
+                android:textAllCaps="false"/>
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="@dimen/text_margin"
+                android:text="@string/password_forgot"
+                android:textColor="@color/red"
+                android:textAllCaps="false"
+                android:shadowColor="@color/transparent"
+                android:background="@color/transparent"/>
+        </LinearLayout>
+
+    </android.support.constraint.ConstraintLayout>
+</ScrollView>
