--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,5 +6,5 @@
     <color name="transparent">#00FFFFFF</color>
     <color name="white">#FFFFFF</color>
     <color name="red">#B92020</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorAccent">#77B842</color>
 </resources>
