--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,5 @@
     <dimen name="layout_margin">32dp</dimen>
     <dimen name="img_profile_size">78dp</dimen>
     <dimen name="margin_edit_text">64dp</dimen>
+    <dimen name="fab_margin">16dp</dimen>
 </resources>
